--- a/Tienda/style.css
+++ b/Tienda/style.css
@@ -8,52 +8,71 @@ body {
 	background: #EAEDED;
 	font-family: sans-serif;
 }
-footer{
-    background:#108017;
-    height: auto;
-    width: 100%;
-    color: #fff;
-	
-}
-/* contenido footer */
-.contenedorfooter{
-	width: 100%;
-	display: flex;
-	padding: 10px;
-}
-.contenedorfooter h1{
-	padding: 20px;
-}
-.contenedorfooter img{
-	height: 100px;
-	width: 100px;
-	display: flex;
-	
-}
-.tiendas{
-	margin-right: auto;
-	margin-left: auto;
-}
-.redes{
-	margin-left: auto;
-	margin-right: auto;
-}
-.facebook{
-	display: flex;
-	padding: 10px;
-}
-.facebook label{
-	padding-top: 40px;
-	padding-left: 10px;
-}
-.instagram label{
-	padding-top: 40px;
-	padding-left: 10px;
-}
 
-.instagram{
-	display: flex;
-	padding: 10px;
+/* contenido footer */
+.pie-pagina{
+    width: 100%;
+    background-color:#108017;
+}
+.pie-pagina .grupo-1{
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap:50px;
+    padding: 45px 0px;
+}
+.pie-pagina .grupo-1 .box figure{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.pie-pagina .grupo-1 .box figure img{
+    width: 250px;
+}
+.pie-pagina .grupo-1 .box h2{
+    color: #fff;
+    margin-bottom: 25px;
+    font-size: 20px;
+}
+.pie-pagina .grupo-1 .box p{
+    color: #efefef;
+    margin-bottom: 10px;
+}
+.pie-pagina .grupo-1 .red-social a{
+    display: inline-block;
+    text-decoration: none;
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+    color: #fff;
+    margin-right: 10px;
+    background-color:#0b5710;
+    text-align: center;
+    transition: all 300ms ease;
+}
+.pie-pagina .grupo-1 .red-social a:hover{
+    color:#4CAF50
+}
+.pie-pagina .grupo-2{
+    background-color:#0b5710;
+    padding: 15px 10px;
+    text-align: center;
+    color: #fff;
+}
+.pie-pagina .grupo-2 small{
+    font-size: 15px;
+}
+@media screen and (max-width:800px){
+    .pie-pagina .grupo-1{
+        width: 90%;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap:30px;
+        padding: 35px 0px;
+    }
 }
 a {
 	text-decoration: none;
